--- a/.github/workflows/Integración continua.yml
+++ b/.github/workflows/Integración continua.yml
@@ -25,12 +25,11 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with python unit test
-        run: |
-          python -m unittest test_ahorcado.py
-      - name: Code Coverage Report
+      - name: Unit Tests & Code Coverage
         run: |
           pip install coverage
           coverage run -m unittest
           coverage report
+
+
       
